# mcp-tools-cli

./: CONFIGURE_ONCE_DEPLOY_ANYWHERE_COMPLETE.md  DEPLOYMENT_INTEGRATION_COMPLETE.md  DEPLOYMENT_MATRIX_FEATURES.md  ERROR_HANDLING_SUMMARY.md  HELP_SYSTEM_IMPLEMENTATION.md  Makefile  README.md  REGISTRY_INTEGRATION_COMPLETE.md  SELECTION_LOGIC_IMPLEMENTATION.md  mcp-servers.json  mcp-servers.json.backup.20250808_092943  pyproject.toml  pytest.ini  simple_error_test.py  test_error_handling.py  test_functionality.py  test_registry_integration.py  test_tui_debug.py  test_validation.py  textual_worker_test.py
.claude/: settings.json
.claude/hooks/: notification.py  post_tool_use.py  pre_tool_use.py  send_event.py  stop.py  subagent_stop.py  user_prompt_submit.py
.claude/hooks/utils/: constants.py  llm_client.py  summarizer.py
.claude/hooks/utils/llm/: anth.py  oai.py  ollama_provider.py
.claude/hooks/utils/tts/: elevenlabs_tts.py  openai_tts.py  pyttsx3_tts.py
.claude/logs/20250808/: functionality-fix-report.md  helpmodal-tabs-fix-report.md  phase1-completion-report.md  phase2-completion-report.md  phase2-implementation-plan.md  phase3-completion-report.md  phase4-completion-report.md  phase4-hotfix-report.md  phase5-completion-report.md  phase5-hotfix-report.md  tui-fixed-report.md
.claude/sprints/: TUI_enhancement.md
.github/workflows/: test.yml
docs/: TESTING.md  keyboard-shortcuts.md  phase5.4-completion-report.md
scripts/: run_tests.py  test_quick.ps1  test_quick.sh
src/mcp_manager/: __init__.py  __main__.py  auto_recovery.py  auto_repair.py  backup_system.py  cli.py  config.py  config_validator.py  conflict_dialog.py  deployment_matrix.py  error_dialogs.py  error_handler.py  error_logging.py  exceptions.py  health_dashboard.py  health_monitor.py  help_content.py  help_system.py  interactive.py  onboarding.py  recovery_wizard.py  rollback_manager.py  secrets.py  selection_manager.py  smart_deployment_dialog.py  smart_wizard.py  sync.py  tooltips.py  tui.py  tui_app.py  tui_app_backup.py  tui_enhanced.py  tui_enhanced_example.py  tui_logging.py  user_preferences.py  utils.py  validation_dialog.py  validators.py  views.py  workers.py
src/mcp_manager/core/: __init__.py  deployment.py  platforms.py  projects.py  registry.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_selection_manager.py  test_tui.py  test_utils.py
tests/compatibility/: __init__.py  test_platforms.py  test_terminals.py
tests/fixtures/: __init__.py  test_data_generators.py
tests/integration/: __init__.py  test_error_scenarios.py  test_keyboard_shortcuts.py  test_workflows.py
tests/performance/: __init__.py  test_large_datasets.py
